--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "body-parser": "^1.18.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.20.1",
+    "mui": "^0.0.1",
+    "muicss": "^0.9.39",
     "react": "^15.6.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^15.6.2",
+    "react-grid-system": "^4.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
