--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react-flexbox-grid": "^2.1.2",
+    "react-router-dom": "^4.3.1",
     "react-springy-parallax": "^1.2.0"
   },
   "scripts": {
