--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "muicss": "^0.9.39",
     "react": "^15.6.2",
     "react-animate-on-scroll": "^2.1.5",
+    "react-csv-reader": "^0.3.2",
     "react-dom": "^15.6.2",
     "react-grid-system": "^4.2.0",
     "react-redux": "^5.0.6",
@@ -25,8 +26,8 @@
     "redux": "^3.7.2",
     "redux-form": "^7.2.1",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-css": "^2.2.12",
-    "semantic-ui-react": "^0.77.2"
+    "semantic-ui-css": "^2.3.3",
+    "semantic-ui-react": "^0.82.3"
   },
   "scripts": {
     "start": "react-scripts start",
