--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "main": "server.js",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^1.0.3",
+    "aws-sdk": "^2.306.0",
+    "axios": "^0.18.0",
+    "better-queue": "^3.8.10",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.4",
     "nodemailer": "^4.6.5",
+    "p-throttle": "^1.1.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "react-flexbox-grid": "^2.1.2",
+    "queue": "^4.5.0",
     "react-router-dom": "^4.3.1",
-    "react-springy-parallax": "^1.2.0"
+    "request": "^2.88.0",
+    "throttled-queue": "^1.0.5",
+    "throttled-request": "^0.1.1"
   },
   "scripts": {
     "start": "node server.js",
