--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "main": "server.js",
   "license": "MIT",
   "dependencies": {
+    "add": "^2.0.6",
     "aws-sdk": "^2.306.0",
     "axios": "^0.18.0",
     "better-queue": "^3.8.10",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "forever": "^0.15.3",
+    "forever-monitor": "^1.7.1",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.4",
     "nodemailer": "^4.6.5",
@@ -20,7 +23,8 @@
     "react-router-dom": "^4.3.1",
     "request": "^2.88.0",
     "throttled-queue": "^1.0.5",
-    "throttled-request": "^0.1.1"
+    "throttled-request": "^0.1.1",
+    "yarn": "^1.9.4"
   },
   "scripts": {
     "start": "node server.js",
